<resources>
    <string name="app_name">PASCA</string>
    <string name="done" translatable="false">done</string>

    <string-array name="user_type">
        <item>Student</item>
        <item>Teacher </item>
        <item>HomeRoom Teacher</item>
        <item>Administration</item>
    </string-array>

    <string-array name="student_sex">
        <item>Male</item>
        <item>Women</item>
    </string-array>

    <string-array name="counter_user">
        <item>User 1</item>
        <item>User 2</item>
        <item>User 3</item>
        <item>User 4</item>
        <item>User 5</item>
        <item>User 6</item>
        <item>User 7</item>
        <item>User 8</item>
        <item>User 9</item>
        <item>User 10</item>
    </string-array>

    <string-array name="search">
        <item>Class</item>
        <item>Name</item>
    </string-array>

    <string-array name="student_class">
        <item>nursery</item>
        <item>kg1</item>
        <item>kg2</item>
        <item>kg3</item>
        <item>1a</item>
        <item>1b</item>
        <item>2a</item>
        <item>2b</item>
        <item>3a</item>
        <item>3b</item>
        <item>4a</item>
        <item>4b</item>
        <item>5a</item>
        <item>5b</item>
        <item>6a</item>
        <item>6b</item>
        <item>7a</item>
        <item>7b</item>
        <item>8a</item>
        <item>8a</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="school_law">   <br><b>  Rules and Regulations for student\n</b>\n</br>

        <br>1.Never bring a toy or real gun, or weapon to school.This includes sharp and dangerous items.\n</br>
        <br>  \n</br>
        <br>2.Never beat or engage in physical conflict with another student.\n</br>
<br>  \n</br>
        <br>3.Never, in words or actions, disrespect teacher or any member of the school staff.\n</br>
<br>  \n</br>
        <br>4.Never use foul or vulgar language.\n</br>
<br>  \n</br>
        <br>5.Never leave the campus without a gate pass from the office.\n</br>
<br>  \n</br>
        <br>6.Never play in the water or toilet area. Do not waste water.\n</br>
<br>  \n</br>
        <br>7.Never go out to the classroom except break times or without a teacher permission.\n</br>
<br>  \n</br>
        <br>8.Never bring electronics or mobile phones to school. Electronics found at school will be confiscated by the administration. Electronics will not be returned.\n</br>
<br>  \n</br>
        <br>9.Never cheat be honest.\n</br>
<br>  \n</br>
        <br>10.Never touch or disturb the property of others.\n</br>
<br>  \n</br>
        <br>11.Never throw sharp objects the property of others.\n</br>
<br>  \n</br>
        <br>12.Never disrespect another person culture or religion.\n</br>
<br>  \n</br>
        <br>13.Never give gifts or money to any teacher staff member for any reason.\n</br>
<br>  \n</br>
        <br>14.Never write on tables, walls or other school property.\n</br>
<br>  \n</br>
        <br>15.Never damage or destroy school property.\n</br>
<br>  \n</br>
        <br>16.Never bring gum or candy to school or use gum or candy to school.\n</br>
<br>  \n</br>
        <br>17.Never play on the stairs or areas that are not play areas.\n</br>
<br>  \n</br>
        <br>18.Never be absent from school without good cause. A medical certificate must be produced. In case of illness.\n</br>
<br>  \n</br>
        <br>19.Never come late to school.\n</br>
<br>  \n</br>
        <br>20.Always wear your uniform with shirt fucked in, stocks and closed sport shoes.\n</br>
<br>  \n</br>
        <br>21.Always keep your hair and body well groomed.\n</br>
<br>  \n</br>
        <br>22.Always raise your hand to speak in class.\n</br>
<br>  \n</br>
        <br>23.Always write date and instructions before write anything else.\n</br>
<br>  \n</br>
        <br>24.Always complete your class work and home word on time.\n</br>
<br>  \n</br>
        <br>25.Always put your trash in the waste basket.\n</br>
<br>  \n</br>
        <br>26.Always do you best in all things!!!\n</br></string>

    <string name="phone_numbers">   <br><b>  HOW DO YOU FIND US?\n</b>\n</br>

        <br>The Kindergarten Division:  +251965500639 \n</br>
        <br>The Kindergarten Division:   0113694475 \n</br>
        <br><b> \n</b>\n</br>
        <br><b>  PRIMARY (1-4) COMP\n</b>\n</br>
        <br>The Primary School Division:+251965500639 \n</br>
        <br>The Primary School Division:0113694475 \n</br>
        <br><b> \n</b>\n</br>
        <br><b>  PRIMARY (5-8) COMP\n</b>\n</br>
        <br>The Primary School Division:  +251965500639 \n</br>
        <br>The Primary School Division:   0113694475 \n</br>
        <br><b> \n</b>\n</br>
        <br><b>  PRIMARY (9-12) COMP\n</b>\n</br>
        <br>The Primary School Division:  +251965500639 \n</br>
        <br>The Primary School Division:   0113694475 \n</br>
        <br><b> \n</b>\n</br>
        <br><b>  IN SOCIALS FOLLOW US\n</b>\n</br>
        <br>Website:pascaInternationschool.com\n</br>
        <br>Instagram: @pascaschool\n</br>
        <br>Telegram: @pascaschool\n</br>
        <br>FaceBook: @pascaschool\n</br>
        <br>Gmail: PascaInternation@gmail.com\n</br>



       </string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Hellow Welcome To</string>
    <string name="nav_header_subtitle">Pasca International School</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="studnet_welcome">Welcome Back</string>
    <string name="student_myactivity">My Activity</string>
    <string name="student_daily">Daily</string>
    <string name="student_library">Library</string>
    <string name="student_rank">Rank</string>
    <string name="gk">Questions</string>
    <string name="ai">AI</string>
    <string name="student_teachers">Teachers</string>
    <string name="student_complain">Complain</string>
    <string name="student_calendar">Calendar</string>
    <string name="student_fees">Fees</string>
    <string name="student_report">Student Report</string>
    <string name="subject">Subject</string>
    <string name="mark">Mark</string>
    <string name="main_daily">Daily</string>
    <string name="main_news">News</string>
    <string name="main_id">ID</string>
    <string name="main2_studnet">STUDENT</string>
    <string name="TeacherNotepad">NotePad</string>
    <string name="TeacherStudnets">Students</string>
    <string name="TeachersProgress">Progress</string>
    <string name="make_your_note_here">Make Your Note Here</string>
    <string name="copy">Copy</string>
    <string name="set_student_mark_here">Set Student mark here</string>
    <string name="send">Send</string>
    <string name="register_users">Register Users</string>
    <string name="post_news">News</string>
    <string name="post_grade">Grade</string>
    <string name="post_question">Question</string>
    <string name="post_books">Books</string>
    <string name="post_students_profile">Students Profile</string>
    <string name="post_teachers_profile">Teachers Profile</string>
    <string name="post_calendar">Calendar</string>
    <string name="post_fees_information">Fees</string>
    <string name="logout">Logout</string>
    <string name="startchat_pass_t">StartChat T</string>
    <string name="startchat_pass_s">StartChat S</string>
    <string name="changeprofile_pass">ChangeProfile</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="change">Change</string>
    <string name="complain_box">Complain Box</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="complain">Complain</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="register">Register</string>
    <string name="go">Go</string>
    <string name="start_chat_password">Start chat password</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="profile_password">Profile Password</string>
    <string name="enter">Enter</string>
    <string name="switch_user">Switch User</string>
    <string name="add_user">Add User</string>
    <string name="show_my_id">Show My Id</string>
    <string name="terms_of_sercice"><u>Terms Of Service</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="about">About</string>
    <string name="current_version">Current Version</string>
    <string name="check_for_update">Check For Update</string>
    <string name="official_website">Official Website</string>
    <string name="follow_us_on_facebook">Follow Us On Facebook</string>
    <string name="follow_us_on_instagram">Follow Us On Instagram</string>
    <string name="author">Author</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="enter_user_password">Enter User password</string>
    <string name="search">Search...</string>
    <string name="class_search">class</string>
    <string name="name_search">Name</string>
    <string name="multi_message">Multi Message</string>
    <string name="caption">Caption</string>
    <string name="upload_books">Upload Books</string>
    <string name="book_name">Book Name</string>
    <string name="upload">Upload</string>
    <string name="success">Success</string>
    <string name="success_msg">Congratulations! you have successfully completed.</string>
    <string name="okay">Okay</string>
    <string name="error">Error</string>
    <string name="error_msg">Error! Something wait wrong! please try again.</string>
    <string name="main_page_selected">%s page is selected</string>
    <string name="main_notePad">NotePad</string>

</resources>