<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backone"
    android:gravity="center"
    tools:context=".ComplainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complain_box"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:textStyle="bold"/>



            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="17dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/complain_name"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="17dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/complain_email"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/message"
                android:inputType="textPersonName"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="17dp"
                android:layout_marginBottom="15dp"

                android:id="@+id/complain_content"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/complain_btn"
                android:text="@string/complain"
                android:background="@drawable/btn_back"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>