<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".RankListActivity">



    <LinearLayout
        android:id="@+id/leaner_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_users_rank"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="13dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:background="@drawable/search_edittext"
            android:hint="@string/search"
            android:padding="5dp" />

        <Button
            android:id="@+id/filter_rank1"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/class_search"
            android:layout_marginRight="3dp"
            android:background="@drawable/search_edittext_btn"
            android:textColor="@color/white"
            android:textSize="11dp"
            android:layout_height="35dp"/>

        <Button
            android:id="@+id/filter_rank2"
            android:layout_weight="2"
            android:text="@string/name_search"
            android:background="@drawable/search_edittext_btn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:textSize="11dp"
            android:layout_height="35dp"/>

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview_users_rank"
        android:layout_below="@+id/leaner_search"/>


</RelativeLayout>