<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@drawable/pagebkg"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context=".ChangeStartChatPassTeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout_start_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_start_chat_t_pass"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle"
            android:background="@color/colorPrimaryDark">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:elevation="20dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:textStyle="bold"/>




        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPassword"
            android:id="@+id/change_start_chat_t_pass1"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conform_password"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPassword"
            android:id="@+id/change_start_chat_t_pass2"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/change_start_chat_t_pass_btn"
            android:text="@string/change"
            android:background="@drawable/btn_back"
            android:textColor="@android:color/white"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>






</LinearLayout>