<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".RegisterUserListActivity">



    <LinearLayout
        android:id="@+id/leaner_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_users_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:background="@drawable/search_edittext"
            android:hint="@string/search"
            android:padding="5dp" />

        <Button
            android:id="@+id/filter_register1"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/class_search"
            android:layout_marginRight="3dp"
            android:background="@drawable/search_edittext_btn"
            android:textColor="@color/white"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/filter_register2"
            android:layout_weight="2"
            android:text="@string/name_search"
            android:background="@drawable/search_edittext_btn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview_users_register"
        android:layout_below="@+id/leaner_search"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/lavender"
        android:src="@drawable/add_person" />


</RelativeLayout>