<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".StartChatPasswordTActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:visibility="gone"
        android:id="@+id/bar_layout_teacher_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_start_chat_t_list"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle"
            android:background="@color/colorPrimaryDark">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_chat_password"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>




            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:inputType="textPassword"
                android:id="@+id/start_chat_password_t"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp"
                android:id="@+id/start_chat_password_btn_t"
                android:text="@string/go"
                android:background="@drawable/btn_back"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>